fix(footer): legal spacing/border

--- a/packages/styles/scss/components/footer/_footer.scss
+++ b/packages/styles/scss/components/footer/_footer.scss
@@ -112,7 +112,7 @@
 
   :host(#{$c4d-prefix}-footer-nav-item),
   :host(#{$c4d-prefix}-legal-nav-item),
-  :host(#{$c4d-prefix}-legal-nav-cookie-preferences-placeholder) {
+  :host(#{$c4d-prefix}-legal-nav-cookie-preferences-placeholder) div {
     @include theme($g100, feature-flag-enabled('enable-css-custom-properties'));
 
     display: list-item;
@@ -245,6 +245,12 @@
     }
   }
 
+  :host(#{$c4d-prefix}-footer-nav-group:last-of-type) {
+    @include breakpoint-down(md) {
+      border-bottom: 1px solid $border-subtle-01;
+    }
+  }
+
   // The style of legal nav deviates from the one of React, so we can make the markup simpler.
   // FIXME: Once the style is stabilized, change the markup of React, too, so we can share the style
   :host(#{$c4d-prefix}-legal-nav):not([size='micro']) {
@@ -277,9 +283,8 @@
 
   :host(#{$c4d-prefix}-legal-nav[size='micro']) {
     ::slotted(#{$c4d-prefix}-legal-nav-item),
-    ::slotted(#{$c4d-prefix}-legal-nav-cookie-preferences-placeholder) {
-
-      @include breakpoint(md){
+    ::slotted(#{$c4d-prefix}-legal-nav-cookie-preferences-placeholder) div {
+      @include breakpoint(md) {
         display: flex;
         align-items: center;
         padding: 0;
